# PixelWars

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_endpoints.py
config/: default.toml  pgadmin_servers.json  production.toml  prometheus.yml
crates/shared-common/: Cargo.toml
crates/shared-common/src/: config.rs  errors.rs  events.rs  lib.rs
crates/shared-common/src/models/: chat.rs  group.rs  mod.rs  parcel.rs  pixel.rs  user.rs  vote.rs
crates/shared-db/: Cargo.toml
crates/shared-db/src/: postgres.rs  redis.rs
crates/shared-messaging/: Cargo.toml
crates/shared-messaging/src/: events.rs  lib.rs  nats_client.rs
crates/shared-observability/: Cargo.toml
crates/shared-observability/src/: health.rs  lib.rs  metrics.rs  tracing.rs
migrations/: 001_initial_schema.sql
proto/: auth.proto  canvas.proto  chat.proto  groups.proto  voting.proto
scripts/: dev.sh  migrate.sh  seed.sh
services/api-gateway/: Cargo.toml  build.rs
services/api-gateway/src/: main.rs  state.rs
services/api-gateway/src/clients/: mod.rs
services/api-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs  tracing.rs
services/api-gateway/src/routes/: auth.rs  canvas.rs  chat.rs  groups.rs  mod.rs  voting.rs
services/api-gateway/src/websocket/: handler.rs
services/auth-service/: Cargo.toml  build.rs
services/auth-service/src/: jwt.rs  main.rs  password.rs  ports.rs  state.rs
services/auth-service/src/adapters/: event_publisher.rs  mod.rs  password_hasher.rs  repository.rs  token_provider.rs
services/auth-service/src/application/: get_user.rs  login_user.rs  mod.rs  register_user.rs  validate_token.rs
services/auth-service/src/domain/: commands.rs  mod.rs  validation.rs
services/auth-service/src/grpc/: server.rs
services/auth-service/src/handlers/: login.rs  mod.rs  register.rs  session.rs
services/canvas-service/: Cargo.toml  build.rs
services/canvas-service/src/: main.rs  ports.rs  state.rs
services/canvas-service/src/adapters/: event_publisher.rs  mod.rs  pixel_cache.rs  repository.rs
services/canvas-service/src/application/: check_overlap.rs  claim_parcel.rs  get_parcel.rs  get_snapshot.rs  mod.rs  update_pixels.rs
services/canvas-service/src/domain/: canvas_state.rs  commands.rs  contiguity.rs  mod.rs  parcel_claim.rs
services/canvas-service/src/grpc/: server.rs
services/canvas-service/src/handlers/: mod.rs  parcel.rs  pixel.rs  snapshot.rs
services/canvas-service/src/storage/: bitmap.rs
services/chat-service/: Cargo.toml  build.rs
services/chat-service/src/: main.rs  ports.rs  rooms.rs  state.rs
services/chat-service/src/adapters/: event_publisher.rs  repository.rs
services/chat-service/src/application/: get_messages.rs  mod.rs  send_message.rs
services/chat-service/src/domain/: commands.rs  validation.rs
services/chat-service/src/grpc/: server.rs
services/chat-service/src/handlers/: global.rs  group.rs  mod.rs  whisper.rs
services/group-service/: Cargo.toml  build.rs
services/group-service/src/: main.rs  ports.rs  state.rs
services/group-service/src/adapters/: event_publisher.rs  repository.rs
services/group-service/src/application/: accept_invite.rs  create_group.rs  get_group.rs  get_user_group.rs  mod.rs  send_invite.rs
services/group-service/src/domain/: commands.rs  mod.rs
services/group-service/src/grpc/: server.rs
services/group-service/src/handlers/: create.rs  invite.rs  manage.rs  mod.rs
services/scheduler-service/: Cargo.toml
services/scheduler-service/src/: main.rs  ports.rs  state.rs
services/scheduler-service/src/adapters/: event_publisher.rs  mod.rs  repository.rs
services/scheduler-service/src/application/: close_voting.rs  end_round.rs  mod.rs  run_activity_check.rs  start_round.rs
services/scheduler-service/src/domain/: commands.rs  mod.rs
services/scheduler-service/src/jobs/: activity_check.rs  mod.rs  round_lifecycle.rs  voting_window.rs
services/voting-service/: Cargo.toml  build.rs
services/voting-service/src/: main.rs  ports.rs  state.rs
services/voting-service/src/adapters/: event_publisher.rs  mod.rs  repository.rs
services/voting-service/src/application/: cast_vote.rs  get_results.rs  is_voting_open.rs  mod.rs
services/voting-service/src/domain/: commands.rs  mod.rs  tallying.rs
services/voting-service/src/grpc/: server.rs
services/voting-service/src/handlers/: cast_vote.rs  mod.rs  results.rs
