[package]
name = "shared-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
