[package]
name = "shared-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
shared-common = { workspace = true }
anyhow = { workspace = true }
