[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared-common = { workspace = true }
shared-db = { workspace = true }
shared-observability = { workspace = true }
shared-messaging = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
