[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared-common = { workspace = true }
shared-db = { workspace = true }
shared-observability = { workspace = true }
shared-messaging = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
