[package]
name = "scheduler-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared-common = { workspace = true }
shared-db = { workspace = true }
shared-observability = { workspace = true }
shared-messaging = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
tokio-cron-scheduler = { workspace = true }
axum = { workspace = true }
